--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "Start loading Dataset\n",
-      "Loading duration= 1.0125441551208496 s\n"
+      "Loading duration= 1.2740685939788818 s\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "7f398009",
    "metadata": {},
    "outputs": [
@@ -160,15 +160,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 64)                960       \n",
+      "dense_3 (Dense)              (None, 64)                960       \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 32)                2080      \n",
+      "dense_4 (Dense)              (None, 32)                2080      \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 5)                 165       \n",
+      "dense_5 (Dense)              (None, 5)                 165       \n",
       "=================================================================\n",
       "Total params: 3,205\n",
       "Trainable params: 3,205\n",
@@ -192,7 +192,7 @@
     "model.add(Dense(GroundTruthWidth, activation='softmax'))\n",
     "\n",
     "#Model compilation\n",
-    "opt_adam = Adam(learning_rate=0.001)\n",
+    "opt_adam = Adam(learning_rate=0.0001)\n",
     "model.compile(loss='categorical_crossentropy', optimizer=opt_adam , metrics=['accuracy'])\n",
     "model.summary()\n"
    ]
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "228d9e45",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "522ae680",
    "metadata": {},
    "outputs": [
@@ -261,28 +261,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "601/601 - 1s - loss: 0.1513 - accuracy: 0.9772 - val_loss: 0.0081 - val_accuracy: 0.9994\n",
+      "601/601 - 1s - loss: 0.5551 - accuracy: 0.9138 - val_loss: 0.2253 - val_accuracy: 0.9389\n",
       "Epoch 2/10\n",
-      "601/601 - 1s - loss: 0.0025 - accuracy: 0.9995 - val_loss: 0.0026 - val_accuracy: 0.9996\n",
+      "601/601 - 1s - loss: 0.1119 - accuracy: 0.9795 - val_loss: 0.0771 - val_accuracy: 0.9932\n",
       "Epoch 3/10\n",
-      "601/601 - 1s - loss: 0.0012 - accuracy: 0.9998 - val_loss: 0.0023 - val_accuracy: 0.9996\n",
+      "601/601 - 1s - loss: 0.0411 - accuracy: 0.9982 - val_loss: 0.0330 - val_accuracy: 0.9968\n",
       "Epoch 4/10\n",
-      "601/601 - 1s - loss: 9.1886e-04 - accuracy: 0.9998 - val_loss: 0.0021 - val_accuracy: 0.9988\n",
+      "601/601 - 1s - loss: 0.0189 - accuracy: 0.9992 - val_loss: 0.0177 - val_accuracy: 0.9994\n",
       "Epoch 5/10\n",
-      "601/601 - 1s - loss: 5.9812e-04 - accuracy: 0.9999 - val_loss: 9.2549e-04 - val_accuracy: 0.9998\n",
+      "601/601 - 0s - loss: 0.0103 - accuracy: 0.9994 - val_loss: 0.0113 - val_accuracy: 0.9994\n",
       "Epoch 6/10\n",
-      "601/601 - 1s - loss: 4.1989e-04 - accuracy: 0.9999 - val_loss: 8.8303e-04 - val_accuracy: 0.9998\n",
+      "601/601 - 1s - loss: 0.0064 - accuracy: 0.9994 - val_loss: 0.0071 - val_accuracy: 0.9994\n",
       "Epoch 7/10\n",
-      "601/601 - 1s - loss: 6.3845e-04 - accuracy: 0.9998 - val_loss: 5.1478e-04 - val_accuracy: 0.9999\n",
+      "601/601 - 1s - loss: 0.0045 - accuracy: 0.9994 - val_loss: 0.0059 - val_accuracy: 0.9994\n",
       "Epoch 8/10\n",
-      "601/601 - 1s - loss: 3.2897e-04 - accuracy: 0.9999 - val_loss: 7.2590e-04 - val_accuracy: 0.9998\n",
+      "601/601 - 1s - loss: 0.0033 - accuracy: 0.9994 - val_loss: 0.0044 - val_accuracy: 0.9994\n",
       "Epoch 9/10\n",
-      "601/601 - 1s - loss: 1.6447e-04 - accuracy: 1.0000 - val_loss: 2.1717e-04 - val_accuracy: 0.9999\n",
+      "601/601 - 1s - loss: 0.0027 - accuracy: 0.9994 - val_loss: 0.0037 - val_accuracy: 0.9994\n",
       "Epoch 10/10\n",
-      "601/601 - 1s - loss: 1.3181e-04 - accuracy: 1.0000 - val_loss: 1.0165e-04 - val_accuracy: 1.0000\n",
+      "601/601 - 1s - loss: 0.0022 - accuracy: 0.9995 - val_loss: 0.0035 - val_accuracy: 0.9995\n",
       "\n",
-      ">>>>>>>>>>> Training completed in 6.48s\n",
-      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_25_epoch10_batchsize100_20211006-181027.h5\n"
+      ">>>>>>>>>>> Training completed in 7.83s\n",
+      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_25_epoch10_batchsize100_20211007-110831.h5\n"
      ]
     }
    ],
@@ -314,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "612aa93b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 13320), started 0:05:16 ago. (Use '!kill 13320' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 26620), started 0:01:32 ago. (Use '!kill 26620' to kill it.)"
       ]
      },
      "metadata": {},
@@ -331,11 +331,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-d76ff700f8686109\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-b108e4f2cfc877de\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-d76ff700f8686109\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b108e4f2cfc877de\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d4182019",
    "metadata": {},
    "outputs": [
@@ -557,12 +557,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "b7e628ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_rendering_runs = 1\n",
+    "N_rendering_runs = 5\n",
     "\n",
     "for i in range(N_rendering_runs):\n",
     "    render = True\n",
