--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -98,8 +98,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "pygame 2.0.1 (SDL 2.0.14, Python 3.8.11)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
       "Start loading Dataset\n",
-      "Loading duration= 1.2740685939788818 s\n"
+      "Loading duration= 0.827822208404541 s\n"
      ]
     }
    ],
@@ -107,31 +109,17 @@
     "#importations\n",
     "import numpy as np\n",
     "import time\n",
+    "from utils.load_data import load_data\n",
     "\n",
     "# define dataset\n",
     "DataSize='25'\n",
     "DataName='CS2021_CLASSIFIER_BDD_'+DataSize\n",
+    "path = \"data/\"+DataName+\".txt\"\n",
     "\n",
-    "# import the list\n",
-    "print(\"Start loading Dataset\")\n",
-    "GoTime= time.time()\n",
-    "InputFile = list(open(\"data/\"+DataName+'.txt',\"r\"))\n",
-    "LengthData = len(InputFile)\n",
+    "input_size = 14\n",
+    "output_size = 5\n",
     "\n",
-    "#convert the list into a numpy array\n",
-    "InputNNWidth = 14\n",
-    "InputNN = np.empty((LengthData,InputNNWidth))\n",
-    "GroundTruthWidth = 5\n",
-    "GroundTruth = np.empty((LengthData,GroundTruthWidth))\n",
-    "for i in range(LengthData):\n",
-    "    TempRow = InputFile[i].split()\n",
-    "    for j in range (InputNNWidth):\n",
-    "        InputNN[i,j] = float(TempRow[j])\n",
-    "    for j in range(GroundTruthWidth):\n",
-    "        GroundTruth[i,j] = float(TempRow[j+InputNNWidth])\n",
-    "\n",
-    "\n",
-    "print('Loading duration=', time.time() - GoTime,'s')\n"
+    "InputNN, GroundTruth, LengthData = load_data(path, input_size, output_size)"
    ]
   },
   {
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "7f398009",
    "metadata": {},
    "outputs": [
@@ -160,15 +148,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_3 (Dense)              (None, 64)                960       \n",
+      "dense (Dense)                (None, 64)                960       \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 32)                2080      \n",
+      "dense_1 (Dense)              (None, 32)                2080      \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 5)                 165       \n",
+      "dense_2 (Dense)              (None, 5)                 165       \n",
       "=================================================================\n",
       "Total params: 3,205\n",
       "Trainable params: 3,205\n",
@@ -187,9 +175,9 @@
     "\n",
     "#Model building\n",
     "model = Sequential()\n",
-    "model.add(Dense(64, input_dim=InputNNWidth, activation='relu'))\n",
+    "model.add(Dense(64, input_dim=input_size, activation='relu'))\n",
     "model.add(Dense(32, activation='relu'))\n",
-    "model.add(Dense(GroundTruthWidth, activation='softmax'))\n",
+    "model.add(Dense(output_size, activation='softmax'))\n",
     "\n",
     "#Model compilation\n",
     "opt_adam = Adam(learning_rate=0.0001)\n",
@@ -210,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "228d9e45",
    "metadata": {},
    "outputs": [
@@ -252,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "522ae680",
    "metadata": {},
    "outputs": [
@@ -261,28 +249,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "601/601 - 1s - loss: 0.5551 - accuracy: 0.9138 - val_loss: 0.2253 - val_accuracy: 0.9389\n",
+      "601/601 - 1s - loss: 0.8476 - accuracy: 0.7628 - val_loss: 0.4224 - val_accuracy: 0.8800\n",
       "Epoch 2/10\n",
-      "601/601 - 1s - loss: 0.1119 - accuracy: 0.9795 - val_loss: 0.0771 - val_accuracy: 0.9932\n",
+      "601/601 - 1s - loss: 0.1749 - accuracy: 0.9634 - val_loss: 0.1358 - val_accuracy: 0.9747\n",
       "Epoch 3/10\n",
-      "601/601 - 1s - loss: 0.0411 - accuracy: 0.9982 - val_loss: 0.0330 - val_accuracy: 0.9968\n",
+      "601/601 - 1s - loss: 0.0648 - accuracy: 0.9944 - val_loss: 0.0594 - val_accuracy: 0.9929\n",
       "Epoch 4/10\n",
-      "601/601 - 1s - loss: 0.0189 - accuracy: 0.9992 - val_loss: 0.0177 - val_accuracy: 0.9994\n",
+      "601/601 - 1s - loss: 0.0300 - accuracy: 0.9968 - val_loss: 0.0335 - val_accuracy: 0.9944\n",
       "Epoch 5/10\n",
-      "601/601 - 0s - loss: 0.0103 - accuracy: 0.9994 - val_loss: 0.0113 - val_accuracy: 0.9994\n",
+      "601/601 - 1s - loss: 0.0150 - accuracy: 0.9985 - val_loss: 0.0163 - val_accuracy: 0.9971\n",
       "Epoch 6/10\n",
-      "601/601 - 1s - loss: 0.0064 - accuracy: 0.9994 - val_loss: 0.0071 - val_accuracy: 0.9994\n",
+      "601/601 - 1s - loss: 0.0086 - accuracy: 0.9992 - val_loss: 0.0108 - val_accuracy: 0.9986\n",
       "Epoch 7/10\n",
-      "601/601 - 1s - loss: 0.0045 - accuracy: 0.9994 - val_loss: 0.0059 - val_accuracy: 0.9994\n",
+      "601/601 - 1s - loss: 0.0056 - accuracy: 0.9994 - val_loss: 0.0079 - val_accuracy: 0.9989\n",
       "Epoch 8/10\n",
-      "601/601 - 1s - loss: 0.0033 - accuracy: 0.9994 - val_loss: 0.0044 - val_accuracy: 0.9994\n",
+      "601/601 - 1s - loss: 0.0040 - accuracy: 0.9994 - val_loss: 0.0050 - val_accuracy: 0.9994\n",
       "Epoch 9/10\n",
-      "601/601 - 1s - loss: 0.0027 - accuracy: 0.9994 - val_loss: 0.0037 - val_accuracy: 0.9994\n",
+      "601/601 - 1s - loss: 0.0030 - accuracy: 0.9994 - val_loss: 0.0038 - val_accuracy: 0.9994\n",
       "Epoch 10/10\n",
-      "601/601 - 1s - loss: 0.0022 - accuracy: 0.9995 - val_loss: 0.0035 - val_accuracy: 0.9995\n",
+      "601/601 - 1s - loss: 0.0024 - accuracy: 0.9994 - val_loss: 0.0033 - val_accuracy: 0.9994\n",
       "\n",
-      ">>>>>>>>>>> Training completed in 7.83s\n",
-      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_25_epoch10_batchsize100_20211007-110831.h5\n"
+      ">>>>>>>>>>> Training completed in 7.25s\n",
+      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_25_epoch10_batchsize100_20211007-121953.h5\n"
      ]
     }
    ],
@@ -314,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "612aa93b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 26620), started 0:01:32 ago. (Use '!kill 26620' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 26620), started 1:11:59 ago. (Use '!kill 26620' to kill it.)"
       ]
      },
      "metadata": {},
@@ -331,11 +319,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-b108e4f2cfc877de\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-c7c71f063c643477\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-b108e4f2cfc877de\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-c7c71f063c643477\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -469,33 +457,10 @@
    "source": [
     "# define dataset\n",
     "DataSize2='25'\n",
-    "DataName2='data/CS2021_CLASSIFIER_BDD_'+DataSize2+'.txt'\n",
+    "DataName2='CS2021_CLASSIFIER_BDD_'+DataSize2\n",
+    "path2 = \"data/\"+DataName2+\".txt\"\n",
     "\n",
-    "InputFile2 = open(DataName2,\"r\")\n",
-    "Liste2 = list(InputFile2)\n",
-    "ValidDataLength = len(Liste2)\n",
-    "\n",
-    "ValidInputNN = np.empty((ValidDataLength,InputNNWidth))\n",
-    "ValidGroundTruth = np.empty((ValidDataLength,GroundTruthWidth))\n",
-    "\n",
-    "\n",
-    "GoFormat = time.time()\n",
-    "for i in range(ValidDataLength):\n",
-    "    TempRow = Liste2[i].split()\n",
-    "    for j in range (InputNNWidth):\n",
-    "        ValidInputNN[i,j] = float(TempRow[j])\n",
-    "    for j in range(GroundTruthWidth):\n",
-    "        ValidGroundTruth[i,j] = float(TempRow[j+InputNNWidth])\n",
-    "\n",
-    "print('>>>>>>> New validation database formatted')\n",
-    "X_DNN_Valid = np.empty((ValidDataLength,InputNNWidth))\n",
-    "Y_DNN_Valid = np.empty((ValidDataLength,GroundTruthWidth))\n",
-    "ValidIMode = np.empty((ValidDataLength))\n",
-    "ValidPredictedIMode = np.empty((ValidDataLength))\n",
-    "ValidPredError = np.empty((ValidDataLength))\n",
-    "X_DNN_Valid = ValidInputNN[0:(ValidDataLength-1),:]\n",
-    "Y_DNN_Valid = ValidGroundTruth[0:(ValidDataLength-1) , :]\n",
-    "\n",
+    "ValidInputNN, ValidGroundTruth, ValidDataLength = load_data(path2, input_size, output_size)\n",
     "\n",
     "#Model prediction\n",
     "\n",
@@ -536,19 +501,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d4182019",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.0.1 (SDL 2.0.14, Python 3.8.11)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import Sim_TFlight\n",
     "\n",
@@ -557,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "b7e628ba",
    "metadata": {},
    "outputs": [],
