--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -101,7 +101,9 @@
       "pygame 2.0.1 (SDL 2.0.14, Python 3.8.11)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
       "Start loading Dataset\n",
-      "Loading duration= 0.827822208404541 s\n"
+      "Loading duration= 0.07939887046813965 s\n",
+      "Start loading Dataset\n",
+      "Loading duration= 0.867145299911499 s\n"
      ]
     }
    ],
@@ -109,17 +111,22 @@
     "#importations\n",
     "import numpy as np\n",
     "import time\n",
-    "from utils.load_data import load_data\n",
+    "from utils import load_data\n",
     "\n",
     "# define dataset\n",
-    "DataSize='25'\n",
+    "DataSize='3'\n",
     "DataName='CS2021_CLASSIFIER_BDD_'+DataSize\n",
     "path = \"data/\"+DataName+\".txt\"\n",
+    "\n",
+    "TestDataSize='25'\n",
+    "TestDataName='CS2021_CLASSIFIER_TEST_'+TestDataSize\n",
+    "test_path = \"data/\"+TestDataName+\".txt\"\n",
     "\n",
     "input_size = 14\n",
     "output_size = 5\n",
     "\n",
-    "InputNN, GroundTruth, LengthData = load_data(path, input_size, output_size)"
+    "InputNN, GroundTruth, LengthData = load_data(path, input_size, output_size)\n",
+    "TestInputNN, TestGroundTruth, TestLenghtData = load_data(test_path, input_size, output_size)"
    ]
   },
   {
@@ -206,8 +213,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database length = 75019\n"
+      "Database length = 6764\n",
+      "Test database length = 75019\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "75019"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -217,14 +235,21 @@
     "TestSize = LengthData - TrainingSize\n",
     "\n",
     "# Train base extraction\n",
-    "X_DNN_Train = InputNN[0:(TrainingSize-1),:]\n",
-    "Y_DNN_Train = GroundTruth[0:(TrainingSize-1) , :] \n",
+    "#X_DNN_Train = InputNN[0:(TrainingSize-1),:]\n",
+    "#Y_DNN_Train = GroundTruth[0:(TrainingSize-1) , :] \n",
+    "\n",
+    "X_DNN_Train = InputNN\n",
+    "Y_DNN_Train = GroundTruth\n",
     "\n",
     "# Test base extraction\n",
-    "X_DNN_Test = InputNN[TrainingSize : LengthData ,:]\n",
-    "Y_DNN_Test = GroundTruth[TrainingSize : LengthData , :]\n",
+    "#X_DNN_Test = InputNN[TrainingSize : LengthData ,:]\n",
+    "#Y_DNN_Test = GroundTruth[TrainingSize : LengthData , :]\n",
     "\n",
-    "print(f\"Database length = {LengthData}\")"
+    "X_DNN_Test = TestInputNN\n",
+    "Y_DNN_Test = TestGroundTruth\n",
+    "\n",
+    "print(f\"Database length = {LengthData}\")\n",
+    "print(f\"Test database length = {TestLenghtData}\")"
    ]
   },
   {
@@ -240,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "522ae680",
    "metadata": {},
    "outputs": [
@@ -248,29 +273,215 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "601/601 - 1s - loss: 0.8476 - accuracy: 0.7628 - val_loss: 0.4224 - val_accuracy: 0.8800\n",
-      "Epoch 2/10\n",
-      "601/601 - 1s - loss: 0.1749 - accuracy: 0.9634 - val_loss: 0.1358 - val_accuracy: 0.9747\n",
-      "Epoch 3/10\n",
-      "601/601 - 1s - loss: 0.0648 - accuracy: 0.9944 - val_loss: 0.0594 - val_accuracy: 0.9929\n",
-      "Epoch 4/10\n",
-      "601/601 - 1s - loss: 0.0300 - accuracy: 0.9968 - val_loss: 0.0335 - val_accuracy: 0.9944\n",
-      "Epoch 5/10\n",
-      "601/601 - 1s - loss: 0.0150 - accuracy: 0.9985 - val_loss: 0.0163 - val_accuracy: 0.9971\n",
-      "Epoch 6/10\n",
-      "601/601 - 1s - loss: 0.0086 - accuracy: 0.9992 - val_loss: 0.0108 - val_accuracy: 0.9986\n",
-      "Epoch 7/10\n",
-      "601/601 - 1s - loss: 0.0056 - accuracy: 0.9994 - val_loss: 0.0079 - val_accuracy: 0.9989\n",
-      "Epoch 8/10\n",
-      "601/601 - 1s - loss: 0.0040 - accuracy: 0.9994 - val_loss: 0.0050 - val_accuracy: 0.9994\n",
-      "Epoch 9/10\n",
-      "601/601 - 1s - loss: 0.0030 - accuracy: 0.9994 - val_loss: 0.0038 - val_accuracy: 0.9994\n",
-      "Epoch 10/10\n",
-      "601/601 - 1s - loss: 0.0024 - accuracy: 0.9994 - val_loss: 0.0033 - val_accuracy: 0.9994\n",
+      "Epoch 1/100\n",
+      "68/68 - 1s - loss: 0.2580 - accuracy: 0.9993 - val_loss: 0.3720 - val_accuracy: 0.9739\n",
+      "Epoch 2/100\n",
+      "68/68 - 1s - loss: 0.2165 - accuracy: 0.9993 - val_loss: 0.3327 - val_accuracy: 0.9748\n",
+      "Epoch 3/100\n",
+      "68/68 - 0s - loss: 0.1803 - accuracy: 0.9993 - val_loss: 0.2999 - val_accuracy: 0.9753\n",
+      "Epoch 4/100\n",
+      "68/68 - 0s - loss: 0.1500 - accuracy: 0.9993 - val_loss: 0.2749 - val_accuracy: 0.9762\n",
+      "Epoch 5/100\n",
+      "68/68 - 0s - loss: 0.1267 - accuracy: 0.9993 - val_loss: 0.2553 - val_accuracy: 0.9769\n",
+      "Epoch 6/100\n",
+      "68/68 - 0s - loss: 0.1071 - accuracy: 0.9993 - val_loss: 0.2405 - val_accuracy: 0.9771\n",
+      "Epoch 7/100\n",
+      "68/68 - 0s - loss: 0.0917 - accuracy: 0.9993 - val_loss: 0.2281 - val_accuracy: 0.9776\n",
+      "Epoch 8/100\n",
+      "68/68 - 0s - loss: 0.0791 - accuracy: 0.9993 - val_loss: 0.2184 - val_accuracy: 0.9780\n",
+      "Epoch 9/100\n",
+      "68/68 - 0s - loss: 0.0686 - accuracy: 0.9993 - val_loss: 0.2111 - val_accuracy: 0.9781\n",
+      "Epoch 10/100\n",
+      "68/68 - 0s - loss: 0.0597 - accuracy: 0.9993 - val_loss: 0.2045 - val_accuracy: 0.9786\n",
+      "Epoch 11/100\n",
+      "68/68 - 1s - loss: 0.0524 - accuracy: 0.9993 - val_loss: 0.1994 - val_accuracy: 0.9788\n",
+      "Epoch 12/100\n",
+      "68/68 - 0s - loss: 0.0462 - accuracy: 0.9993 - val_loss: 0.1954 - val_accuracy: 0.9791\n",
+      "Epoch 13/100\n",
+      "68/68 - 0s - loss: 0.0406 - accuracy: 0.9993 - val_loss: 0.1921 - val_accuracy: 0.9791\n",
+      "Epoch 14/100\n",
+      "68/68 - 0s - loss: 0.0358 - accuracy: 0.9993 - val_loss: 0.1888 - val_accuracy: 0.9796\n",
+      "Epoch 15/100\n",
+      "68/68 - 0s - loss: 0.0319 - accuracy: 0.9993 - val_loss: 0.1870 - val_accuracy: 0.9797\n",
+      "Epoch 16/100\n",
+      "68/68 - 0s - loss: 0.0286 - accuracy: 0.9993 - val_loss: 0.1849 - val_accuracy: 0.9800\n",
+      "Epoch 17/100\n",
+      "68/68 - 0s - loss: 0.0258 - accuracy: 0.9993 - val_loss: 0.1830 - val_accuracy: 0.9805\n",
+      "Epoch 18/100\n",
+      "68/68 - 0s - loss: 0.0233 - accuracy: 0.9993 - val_loss: 0.1821 - val_accuracy: 0.9805\n",
+      "Epoch 19/100\n",
+      "68/68 - 1s - loss: 0.0213 - accuracy: 0.9993 - val_loss: 0.1810 - val_accuracy: 0.9808\n",
+      "Epoch 20/100\n",
+      "68/68 - 0s - loss: 0.0194 - accuracy: 0.9993 - val_loss: 0.1804 - val_accuracy: 0.9806\n",
+      "Epoch 21/100\n",
+      "68/68 - 1s - loss: 0.0179 - accuracy: 0.9993 - val_loss: 0.1799 - val_accuracy: 0.9809\n",
+      "Epoch 22/100\n",
+      "68/68 - 1s - loss: 0.0165 - accuracy: 0.9993 - val_loss: 0.1798 - val_accuracy: 0.9809\n",
+      "Epoch 23/100\n",
+      "68/68 - 0s - loss: 0.0152 - accuracy: 0.9993 - val_loss: 0.1798 - val_accuracy: 0.9811\n",
+      "Epoch 24/100\n",
+      "68/68 - 0s - loss: 0.0142 - accuracy: 0.9993 - val_loss: 0.1789 - val_accuracy: 0.9813\n",
+      "Epoch 25/100\n",
+      "68/68 - 0s - loss: 0.0132 - accuracy: 0.9993 - val_loss: 0.1788 - val_accuracy: 0.9813\n",
+      "Epoch 26/100\n",
+      "68/68 - 0s - loss: 0.0123 - accuracy: 0.9993 - val_loss: 0.1793 - val_accuracy: 0.9812\n",
+      "Epoch 27/100\n",
+      "68/68 - 1s - loss: 0.0115 - accuracy: 0.9993 - val_loss: 0.1789 - val_accuracy: 0.9816\n",
+      "Epoch 28/100\n",
+      "68/68 - 0s - loss: 0.0108 - accuracy: 0.9993 - val_loss: 0.1791 - val_accuracy: 0.9816\n",
+      "Epoch 29/100\n",
+      "68/68 - 0s - loss: 0.0102 - accuracy: 0.9993 - val_loss: 0.1790 - val_accuracy: 0.9818\n",
+      "Epoch 30/100\n",
+      "68/68 - 0s - loss: 0.0096 - accuracy: 0.9993 - val_loss: 0.1799 - val_accuracy: 0.9818\n",
+      "Epoch 31/100\n",
+      "68/68 - 0s - loss: 0.0091 - accuracy: 0.9993 - val_loss: 0.1793 - val_accuracy: 0.9819\n",
+      "Epoch 32/100\n",
+      "68/68 - 0s - loss: 0.0086 - accuracy: 0.9993 - val_loss: 0.1792 - val_accuracy: 0.9819\n",
+      "Epoch 33/100\n",
+      "68/68 - 0s - loss: 0.0082 - accuracy: 0.9993 - val_loss: 0.1803 - val_accuracy: 0.9818\n",
+      "Epoch 34/100\n",
+      "68/68 - 0s - loss: 0.0078 - accuracy: 0.9993 - val_loss: 0.1803 - val_accuracy: 0.9819\n",
+      "Epoch 35/100\n",
+      "68/68 - 0s - loss: 0.0074 - accuracy: 0.9993 - val_loss: 0.1806 - val_accuracy: 0.9820\n",
+      "Epoch 36/100\n",
+      "68/68 - 0s - loss: 0.0071 - accuracy: 0.9993 - val_loss: 0.1809 - val_accuracy: 0.9821\n",
+      "Epoch 37/100\n",
+      "68/68 - 1s - loss: 0.0068 - accuracy: 0.9993 - val_loss: 0.1812 - val_accuracy: 0.9821\n",
+      "Epoch 38/100\n",
+      "68/68 - 0s - loss: 0.0065 - accuracy: 0.9993 - val_loss: 0.1812 - val_accuracy: 0.9821\n",
+      "Epoch 39/100\n",
+      "68/68 - 1s - loss: 0.0062 - accuracy: 0.9993 - val_loss: 0.1813 - val_accuracy: 0.9822\n",
+      "Epoch 40/100\n",
+      "68/68 - 0s - loss: 0.0060 - accuracy: 0.9993 - val_loss: 0.1819 - val_accuracy: 0.9822\n",
+      "Epoch 41/100\n",
+      "68/68 - 0s - loss: 0.0057 - accuracy: 0.9993 - val_loss: 0.1823 - val_accuracy: 0.9822\n",
+      "Epoch 42/100\n",
+      "68/68 - 0s - loss: 0.0055 - accuracy: 0.9993 - val_loss: 0.1824 - val_accuracy: 0.9822\n",
+      "Epoch 43/100\n",
+      "68/68 - 0s - loss: 0.0054 - accuracy: 0.9993 - val_loss: 0.1833 - val_accuracy: 0.9823\n",
+      "Epoch 44/100\n",
+      "68/68 - 0s - loss: 0.0051 - accuracy: 0.9993 - val_loss: 0.1838 - val_accuracy: 0.9823\n",
+      "Epoch 45/100\n",
+      "68/68 - 0s - loss: 0.0050 - accuracy: 0.9993 - val_loss: 0.1834 - val_accuracy: 0.9823\n",
+      "Epoch 46/100\n",
+      "68/68 - 0s - loss: 0.0048 - accuracy: 0.9993 - val_loss: 0.1838 - val_accuracy: 0.9824\n",
+      "Epoch 47/100\n",
+      "68/68 - 0s - loss: 0.0047 - accuracy: 0.9993 - val_loss: 0.1847 - val_accuracy: 0.9822\n",
+      "Epoch 48/100\n",
+      "68/68 - 1s - loss: 0.0045 - accuracy: 0.9993 - val_loss: 0.1851 - val_accuracy: 0.9823\n",
+      "Epoch 49/100\n",
+      "68/68 - 1s - loss: 0.0044 - accuracy: 0.9993 - val_loss: 0.1851 - val_accuracy: 0.9825\n",
+      "Epoch 50/100\n",
+      "68/68 - 0s - loss: 0.0043 - accuracy: 0.9993 - val_loss: 0.1854 - val_accuracy: 0.9824\n",
+      "Epoch 51/100\n",
+      "68/68 - 0s - loss: 0.0042 - accuracy: 0.9993 - val_loss: 0.1860 - val_accuracy: 0.9825\n",
+      "Epoch 52/100\n",
+      "68/68 - 0s - loss: 0.0040 - accuracy: 0.9993 - val_loss: 0.1864 - val_accuracy: 0.9824\n",
+      "Epoch 53/100\n",
+      "68/68 - 0s - loss: 0.0039 - accuracy: 0.9993 - val_loss: 0.1865 - val_accuracy: 0.9825\n",
+      "Epoch 54/100\n",
+      "68/68 - 1s - loss: 0.0038 - accuracy: 0.9993 - val_loss: 0.1869 - val_accuracy: 0.9825\n",
+      "Epoch 55/100\n",
+      "68/68 - 1s - loss: 0.0037 - accuracy: 0.9993 - val_loss: 0.1873 - val_accuracy: 0.9825\n",
+      "Epoch 56/100\n",
+      "68/68 - 1s - loss: 0.0036 - accuracy: 0.9993 - val_loss: 0.1876 - val_accuracy: 0.9826\n",
+      "Epoch 57/100\n",
+      "68/68 - 1s - loss: 0.0036 - accuracy: 0.9993 - val_loss: 0.1884 - val_accuracy: 0.9825\n",
+      "Epoch 58/100\n",
+      "68/68 - 1s - loss: 0.0035 - accuracy: 0.9993 - val_loss: 0.1882 - val_accuracy: 0.9826\n",
+      "Epoch 59/100\n",
+      "68/68 - 1s - loss: 0.0034 - accuracy: 0.9993 - val_loss: 0.1888 - val_accuracy: 0.9826\n",
+      "Epoch 60/100\n",
+      "68/68 - 0s - loss: 0.0033 - accuracy: 0.9993 - val_loss: 0.1893 - val_accuracy: 0.9826\n",
+      "Epoch 61/100\n",
+      "68/68 - 0s - loss: 0.0033 - accuracy: 0.9993 - val_loss: 0.1891 - val_accuracy: 0.9827\n",
+      "Epoch 62/100\n",
+      "68/68 - 0s - loss: 0.0031 - accuracy: 0.9993 - val_loss: 0.1899 - val_accuracy: 0.9827\n",
+      "Epoch 63/100\n",
+      "68/68 - 0s - loss: 0.0031 - accuracy: 0.9993 - val_loss: 0.1900 - val_accuracy: 0.9828\n",
+      "Epoch 64/100\n",
+      "68/68 - 0s - loss: 0.0030 - accuracy: 0.9993 - val_loss: 0.1905 - val_accuracy: 0.9827\n",
+      "Epoch 65/100\n",
+      "68/68 - 0s - loss: 0.0030 - accuracy: 0.9993 - val_loss: 0.1909 - val_accuracy: 0.9827\n",
+      "Epoch 66/100\n",
+      "68/68 - 0s - loss: 0.0029 - accuracy: 0.9993 - val_loss: 0.1913 - val_accuracy: 0.9827\n",
+      "Epoch 67/100\n",
+      "68/68 - 1s - loss: 0.0028 - accuracy: 0.9993 - val_loss: 0.1918 - val_accuracy: 0.9827\n",
+      "Epoch 68/100\n",
+      "68/68 - 0s - loss: 0.0028 - accuracy: 0.9993 - val_loss: 0.1923 - val_accuracy: 0.9828\n",
+      "Epoch 69/100\n",
+      "68/68 - 0s - loss: 0.0028 - accuracy: 0.9993 - val_loss: 0.1922 - val_accuracy: 0.9828\n",
+      "Epoch 70/100\n",
+      "68/68 - 0s - loss: 0.0027 - accuracy: 0.9993 - val_loss: 0.1922 - val_accuracy: 0.9829\n",
+      "Epoch 71/100\n",
+      "68/68 - 0s - loss: 0.0026 - accuracy: 0.9993 - val_loss: 0.1930 - val_accuracy: 0.9829\n",
+      "Epoch 72/100\n",
+      "68/68 - 0s - loss: 0.0025 - accuracy: 0.9993 - val_loss: 0.1928 - val_accuracy: 0.9829\n",
+      "Epoch 73/100\n",
+      "68/68 - 0s - loss: 0.0025 - accuracy: 0.9993 - val_loss: 0.1936 - val_accuracy: 0.9829\n",
+      "Epoch 74/100\n",
+      "68/68 - 0s - loss: 0.0024 - accuracy: 0.9993 - val_loss: 0.1940 - val_accuracy: 0.9830\n",
+      "Epoch 75/100\n",
+      "68/68 - 0s - loss: 0.0024 - accuracy: 0.9993 - val_loss: 0.1943 - val_accuracy: 0.9829\n",
+      "Epoch 76/100\n",
+      "68/68 - 0s - loss: 0.0024 - accuracy: 0.9993 - val_loss: 0.1942 - val_accuracy: 0.9830\n",
+      "Epoch 77/100\n",
+      "68/68 - 0s - loss: 0.0023 - accuracy: 0.9993 - val_loss: 0.1946 - val_accuracy: 0.9830\n",
+      "Epoch 78/100\n",
+      "68/68 - 0s - loss: 0.0023 - accuracy: 0.9993 - val_loss: 0.1951 - val_accuracy: 0.9830\n",
+      "Epoch 79/100\n",
+      "68/68 - 0s - loss: 0.0022 - accuracy: 0.9993 - val_loss: 0.1949 - val_accuracy: 0.9830\n",
+      "Epoch 80/100\n",
+      "68/68 - 0s - loss: 0.0022 - accuracy: 0.9993 - val_loss: 0.1952 - val_accuracy: 0.9830\n",
+      "Epoch 81/100\n",
+      "68/68 - 0s - loss: 0.0021 - accuracy: 0.9993 - val_loss: 0.1959 - val_accuracy: 0.9830\n",
+      "Epoch 82/100\n",
+      "68/68 - 1s - loss: 0.0021 - accuracy: 0.9993 - val_loss: 0.1964 - val_accuracy: 0.9830\n",
+      "Epoch 83/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68/68 - 1s - loss: 0.0021 - accuracy: 0.9993 - val_loss: 0.1963 - val_accuracy: 0.9831\n",
+      "Epoch 84/100\n",
+      "68/68 - 1s - loss: 0.0021 - accuracy: 0.9993 - val_loss: 0.1965 - val_accuracy: 0.9831\n",
+      "Epoch 85/100\n",
+      "68/68 - 1s - loss: 0.0020 - accuracy: 0.9993 - val_loss: 0.1978 - val_accuracy: 0.9831\n",
+      "Epoch 86/100\n",
+      "68/68 - 1s - loss: 0.0019 - accuracy: 0.9993 - val_loss: 0.1977 - val_accuracy: 0.9831\n",
+      "Epoch 87/100\n",
+      "68/68 - 0s - loss: 0.0019 - accuracy: 0.9993 - val_loss: 0.1976 - val_accuracy: 0.9831\n",
+      "Epoch 88/100\n",
+      "68/68 - 0s - loss: 0.0019 - accuracy: 0.9993 - val_loss: 0.1983 - val_accuracy: 0.9831\n",
+      "Epoch 89/100\n",
+      "68/68 - 0s - loss: 0.0019 - accuracy: 0.9993 - val_loss: 0.1991 - val_accuracy: 0.9831\n",
+      "Epoch 90/100\n",
+      "68/68 - 0s - loss: 0.0019 - accuracy: 0.9993 - val_loss: 0.1987 - val_accuracy: 0.9832\n",
+      "Epoch 91/100\n",
+      "68/68 - 0s - loss: 0.0018 - accuracy: 0.9993 - val_loss: 0.1990 - val_accuracy: 0.9831\n",
+      "Epoch 92/100\n",
+      "68/68 - 0s - loss: 0.0017 - accuracy: 0.9993 - val_loss: 0.1995 - val_accuracy: 0.9832\n",
+      "Epoch 93/100\n",
+      "68/68 - 0s - loss: 0.0017 - accuracy: 0.9993 - val_loss: 0.1997 - val_accuracy: 0.9832\n",
+      "Epoch 94/100\n",
+      "68/68 - 0s - loss: 0.0016 - accuracy: 0.9993 - val_loss: 0.2001 - val_accuracy: 0.9832\n",
+      "Epoch 95/100\n",
+      "68/68 - 0s - loss: 0.0016 - accuracy: 0.9993 - val_loss: 0.2005 - val_accuracy: 0.9832\n",
+      "Epoch 96/100\n",
+      "68/68 - 0s - loss: 0.0016 - accuracy: 0.9993 - val_loss: 0.2010 - val_accuracy: 0.9832\n",
+      "Epoch 97/100\n",
+      "68/68 - 1s - loss: 0.0016 - accuracy: 0.9993 - val_loss: 0.2009 - val_accuracy: 0.9832\n",
+      "Epoch 98/100\n",
+      "68/68 - 0s - loss: 0.0015 - accuracy: 0.9993 - val_loss: 0.2014 - val_accuracy: 0.9832\n",
+      "Epoch 99/100\n",
+      "68/68 - 0s - loss: 0.0015 - accuracy: 0.9994 - val_loss: 0.2013 - val_accuracy: 0.9833\n",
+      "Epoch 100/100\n",
+      "68/68 - 0s - loss: 0.0015 - accuracy: 0.9994 - val_loss: 0.2019 - val_accuracy: 0.9832\n",
       "\n",
-      ">>>>>>>>>>> Training completed in 7.25s\n",
-      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_25_epoch10_batchsize100_20211007-121953.h5\n"
+      ">>>>>>>>>>> Training completed in 50.27s\n",
+      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_3_epoch100_batchsize100_20211007-135745.h5\n"
      ]
     }
    ],
@@ -280,7 +491,7 @@
     "import datetime\n",
     "\n",
     "#training process\n",
-    "nb_epochs= 10\n",
+    "nb_epochs= 100\n",
     "batch_size =100\n",
     "\n",
     "time_date = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
@@ -302,14 +513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "612aa93b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 26620), started 1:11:59 ago. (Use '!kill 26620' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 11968), started 0:01:42 ago. (Use '!kill 11968' to kill it.)"
       ]
      },
      "metadata": {},
@@ -319,11 +530,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-c7c71f063c643477\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-19bc5ed3949b71d3\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-c7c71f063c643477\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-19bc5ed3949b71d3\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
