--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "7f398009",
    "metadata": {},
    "outputs": [
@@ -155,15 +155,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 64)                960       \n",
+      "dense_3 (Dense)              (None, 64)                960       \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 32)                2080      \n",
+      "dense_4 (Dense)              (None, 32)                2080      \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 5)                 165       \n",
+      "dense_5 (Dense)              (None, 5)                 165       \n",
       "=================================================================\n",
       "Total params: 3,205\n",
       "Trainable params: 3,205\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "228d9e45",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database length = 5184\n",
+      "Train database length = 5184\n",
       "Test database length = 75019\n"
      ]
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "522ae680",
    "metadata": {},
    "outputs": [
@@ -263,215 +263,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n",
-      "81/81 - 2s - loss: 2.1117 - accuracy: 0.0303 - val_loss: 1.4354 - val_accuracy: 0.3100\n",
-      "Epoch 2/100\n",
-      "81/81 - 1s - loss: 1.1767 - accuracy: 0.7913 - val_loss: 1.0931 - val_accuracy: 0.8520\n",
-      "Epoch 3/100\n",
-      "81/81 - 1s - loss: 0.9328 - accuracy: 0.9473 - val_loss: 0.9889 - val_accuracy: 0.8634\n",
-      "Epoch 4/100\n",
-      "81/81 - 1s - loss: 0.7655 - accuracy: 0.9541 - val_loss: 0.8967 - val_accuracy: 0.8739\n",
-      "Epoch 5/100\n",
-      "81/81 - 1s - loss: 0.6141 - accuracy: 0.9641 - val_loss: 0.8000 - val_accuracy: 0.8974\n",
-      "Epoch 6/100\n",
-      "81/81 - 1s - loss: 0.4772 - accuracy: 0.9871 - val_loss: 0.7299 - val_accuracy: 0.9193\n",
-      "Epoch 7/100\n",
-      "81/81 - 1s - loss: 0.3621 - accuracy: 0.9996 - val_loss: 0.6859 - val_accuracy: 0.9185\n",
-      "Epoch 8/100\n",
-      "81/81 - 1s - loss: 0.2737 - accuracy: 0.9996 - val_loss: 0.6571 - val_accuracy: 0.9206\n",
-      "Epoch 9/100\n",
-      "81/81 - 1s - loss: 0.2056 - accuracy: 0.9996 - val_loss: 0.6398 - val_accuracy: 0.9208\n",
-      "Epoch 10/100\n",
-      "81/81 - 1s - loss: 0.1496 - accuracy: 0.9996 - val_loss: 0.6358 - val_accuracy: 0.9207\n",
-      "Epoch 11/100\n",
-      "81/81 - 1s - loss: 0.1140 - accuracy: 0.9996 - val_loss: 0.6429 - val_accuracy: 0.9203\n",
-      "Epoch 12/100\n",
-      "81/81 - 1s - loss: 0.0896 - accuracy: 0.9996 - val_loss: 0.6575 - val_accuracy: 0.9196\n",
-      "Epoch 13/100\n",
-      "81/81 - 1s - loss: 0.0713 - accuracy: 0.9996 - val_loss: 0.6709 - val_accuracy: 0.9195\n",
-      "Epoch 14/100\n",
-      "81/81 - 1s - loss: 0.0574 - accuracy: 0.9996 - val_loss: 0.6838 - val_accuracy: 0.9215\n",
-      "Epoch 15/100\n",
-      "81/81 - 1s - loss: 0.0475 - accuracy: 0.9996 - val_loss: 0.7004 - val_accuracy: 0.9220\n",
-      "Epoch 16/100\n",
-      "81/81 - 1s - loss: 0.0397 - accuracy: 0.9996 - val_loss: 0.7175 - val_accuracy: 0.9239\n",
-      "Epoch 17/100\n",
-      "81/81 - 1s - loss: 0.0336 - accuracy: 0.9996 - val_loss: 0.7370 - val_accuracy: 0.9236\n",
-      "Epoch 18/100\n",
-      "81/81 - 1s - loss: 0.0287 - accuracy: 0.9996 - val_loss: 0.7612 - val_accuracy: 0.9233\n",
-      "Epoch 19/100\n",
-      "81/81 - 1s - loss: 0.0248 - accuracy: 0.9996 - val_loss: 0.7907 - val_accuracy: 0.9226\n",
-      "Epoch 20/100\n",
-      "81/81 - 1s - loss: 0.0215 - accuracy: 0.9996 - val_loss: 0.8177 - val_accuracy: 0.9212\n",
-      "Epoch 21/100\n",
-      "81/81 - 1s - loss: 0.0189 - accuracy: 0.9996 - val_loss: 0.8402 - val_accuracy: 0.9218\n",
-      "Epoch 22/100\n",
-      "81/81 - 1s - loss: 0.0167 - accuracy: 0.9996 - val_loss: 0.8597 - val_accuracy: 0.9236\n",
-      "Epoch 23/100\n",
-      "81/81 - 1s - loss: 0.0149 - accuracy: 0.9996 - val_loss: 0.8839 - val_accuracy: 0.9211\n",
-      "Epoch 24/100\n",
-      "81/81 - 1s - loss: 0.0133 - accuracy: 0.9996 - val_loss: 0.9008 - val_accuracy: 0.9235\n",
-      "Epoch 25/100\n",
-      "81/81 - 1s - loss: 0.0120 - accuracy: 0.9996 - val_loss: 0.9198 - val_accuracy: 0.9238\n",
-      "Epoch 26/100\n",
-      "81/81 - 1s - loss: 0.0108 - accuracy: 0.9996 - val_loss: 0.9390 - val_accuracy: 0.9232\n",
-      "Epoch 27/100\n",
-      "81/81 - 1s - loss: 0.0097 - accuracy: 0.9996 - val_loss: 0.9602 - val_accuracy: 0.9217\n",
-      "Epoch 28/100\n",
-      "81/81 - 1s - loss: 0.0089 - accuracy: 0.9996 - val_loss: 0.9798 - val_accuracy: 0.9203\n",
-      "Epoch 29/100\n",
-      "81/81 - 1s - loss: 0.0081 - accuracy: 0.9996 - val_loss: 0.9959 - val_accuracy: 0.9213\n",
-      "Epoch 30/100\n",
-      "81/81 - 1s - loss: 0.0075 - accuracy: 0.9996 - val_loss: 1.0122 - val_accuracy: 0.9214\n",
-      "Epoch 31/100\n",
-      "81/81 - 1s - loss: 0.0069 - accuracy: 0.9996 - val_loss: 1.0318 - val_accuracy: 0.9195\n",
-      "Epoch 32/100\n",
-      "81/81 - 1s - loss: 0.0064 - accuracy: 0.9996 - val_loss: 1.0473 - val_accuracy: 0.9196\n",
-      "Epoch 33/100\n",
-      "81/81 - 1s - loss: 0.0059 - accuracy: 0.9996 - val_loss: 1.0612 - val_accuracy: 0.9207\n",
-      "Epoch 34/100\n",
-      "81/81 - 1s - loss: 0.0055 - accuracy: 0.9996 - val_loss: 1.0761 - val_accuracy: 0.9205\n",
-      "Epoch 35/100\n",
-      "81/81 - 1s - loss: 0.0052 - accuracy: 0.9996 - val_loss: 1.0957 - val_accuracy: 0.9169\n",
-      "Epoch 36/100\n",
-      "81/81 - 1s - loss: 0.0048 - accuracy: 0.9996 - val_loss: 1.1074 - val_accuracy: 0.9184\n",
-      "Epoch 37/100\n",
-      "81/81 - 1s - loss: 0.0046 - accuracy: 0.9996 - val_loss: 1.1194 - val_accuracy: 0.9199\n",
-      "Epoch 38/100\n",
-      "81/81 - 1s - loss: 0.0043 - accuracy: 0.9996 - val_loss: 1.1354 - val_accuracy: 0.9178\n",
-      "Epoch 39/100\n",
-      "81/81 - 1s - loss: 0.0041 - accuracy: 0.9996 - val_loss: 1.1489 - val_accuracy: 0.9178\n",
-      "Epoch 40/100\n",
-      "81/81 - 1s - loss: 0.0039 - accuracy: 0.9996 - val_loss: 1.1581 - val_accuracy: 0.9201\n",
-      "Epoch 41/100\n",
-      "81/81 - 1s - loss: 0.0037 - accuracy: 0.9996 - val_loss: 1.1705 - val_accuracy: 0.9204\n",
-      "Epoch 42/100\n",
-      "81/81 - 1s - loss: 0.0035 - accuracy: 0.9996 - val_loss: 1.1881 - val_accuracy: 0.9168\n",
-      "Epoch 43/100\n",
-      "81/81 - 1s - loss: 0.0033 - accuracy: 0.9996 - val_loss: 1.1932 - val_accuracy: 0.9212\n",
-      "Epoch 44/100\n",
-      "81/81 - 1s - loss: 0.0032 - accuracy: 0.9996 - val_loss: 1.2095 - val_accuracy: 0.9189\n",
-      "Epoch 45/100\n",
-      "81/81 - 1s - loss: 0.0031 - accuracy: 0.9996 - val_loss: 1.2234 - val_accuracy: 0.9172\n",
-      "Epoch 46/100\n",
-      "81/81 - 1s - loss: 0.0030 - accuracy: 0.9996 - val_loss: 1.2318 - val_accuracy: 0.9193\n",
-      "Epoch 47/100\n",
-      "81/81 - 1s - loss: 0.0028 - accuracy: 0.9996 - val_loss: 1.2486 - val_accuracy: 0.9158\n",
-      "Epoch 48/100\n",
-      "81/81 - 1s - loss: 0.0027 - accuracy: 0.9996 - val_loss: 1.2532 - val_accuracy: 0.9200\n",
-      "Epoch 49/100\n",
-      "81/81 - 1s - loss: 0.0027 - accuracy: 0.9996 - val_loss: 1.2659 - val_accuracy: 0.9184\n",
-      "Epoch 50/100\n",
-      "81/81 - 1s - loss: 0.0025 - accuracy: 0.9996 - val_loss: 1.2811 - val_accuracy: 0.9163\n",
-      "Epoch 51/100\n",
-      "81/81 - 1s - loss: 0.0025 - accuracy: 0.9996 - val_loss: 1.2939 - val_accuracy: 0.9155\n",
-      "Epoch 52/100\n",
-      "81/81 - 1s - loss: 0.0024 - accuracy: 0.9996 - val_loss: 1.3012 - val_accuracy: 0.9173\n",
-      "Epoch 53/100\n",
-      "81/81 - 1s - loss: 0.0023 - accuracy: 0.9996 - val_loss: 1.3124 - val_accuracy: 0.9169\n",
-      "Epoch 54/100\n",
-      "81/81 - 1s - loss: 0.0023 - accuracy: 0.9996 - val_loss: 1.3185 - val_accuracy: 0.9188\n",
-      "Epoch 55/100\n",
-      "81/81 - 1s - loss: 0.0022 - accuracy: 0.9996 - val_loss: 1.3272 - val_accuracy: 0.9203\n",
-      "Epoch 56/100\n",
-      "81/81 - 1s - loss: 0.0021 - accuracy: 0.9996 - val_loss: 1.3381 - val_accuracy: 0.9199\n",
-      "Epoch 57/100\n",
-      "81/81 - 1s - loss: 0.0021 - accuracy: 0.9996 - val_loss: 1.3471 - val_accuracy: 0.9205\n",
-      "Epoch 58/100\n",
-      "81/81 - 1s - loss: 0.0020 - accuracy: 0.9996 - val_loss: 1.3610 - val_accuracy: 0.9182\n",
-      "Epoch 59/100\n",
-      "81/81 - 1s - loss: 0.0020 - accuracy: 0.9996 - val_loss: 1.3695 - val_accuracy: 0.9188\n",
-      "Epoch 60/100\n",
-      "81/81 - 1s - loss: 0.0019 - accuracy: 0.9996 - val_loss: 1.3787 - val_accuracy: 0.9195\n",
-      "Epoch 61/100\n",
-      "81/81 - 1s - loss: 0.0019 - accuracy: 0.9996 - val_loss: 1.3867 - val_accuracy: 0.9207\n",
-      "Epoch 62/100\n",
-      "81/81 - 1s - loss: 0.0019 - accuracy: 0.9996 - val_loss: 1.3960 - val_accuracy: 0.9209\n",
-      "Epoch 63/100\n",
-      "81/81 - 1s - loss: 0.0018 - accuracy: 0.9996 - val_loss: 1.4110 - val_accuracy: 0.9175\n",
-      "Epoch 64/100\n",
-      "81/81 - 1s - loss: 0.0018 - accuracy: 0.9996 - val_loss: 1.4248 - val_accuracy: 0.9152\n",
-      "Epoch 65/100\n",
-      "81/81 - 1s - loss: 0.0017 - accuracy: 0.9996 - val_loss: 1.4326 - val_accuracy: 0.9158\n",
-      "Epoch 66/100\n",
-      "81/81 - 1s - loss: 0.0017 - accuracy: 0.9996 - val_loss: 1.4461 - val_accuracy: 0.9140\n",
-      "Epoch 67/100\n",
-      "81/81 - 1s - loss: 0.0017 - accuracy: 0.9996 - val_loss: 1.4473 - val_accuracy: 0.9184\n",
-      "Epoch 68/100\n",
-      "81/81 - 1s - loss: 0.0017 - accuracy: 0.9996 - val_loss: 1.4567 - val_accuracy: 0.9183\n",
-      "Epoch 69/100\n",
-      "81/81 - 1s - loss: 0.0016 - accuracy: 0.9996 - val_loss: 1.4667 - val_accuracy: 0.9176\n",
-      "Epoch 70/100\n",
-      "81/81 - 1s - loss: 0.0016 - accuracy: 0.9996 - val_loss: 1.4824 - val_accuracy: 0.9142\n",
-      "Epoch 71/100\n",
-      "81/81 - 1s - loss: 0.0016 - accuracy: 0.9996 - val_loss: 1.4948 - val_accuracy: 0.9128\n",
-      "Epoch 72/100\n",
-      "81/81 - 1s - loss: 0.0015 - accuracy: 0.9996 - val_loss: 1.4916 - val_accuracy: 0.9195\n",
-      "Epoch 73/100\n",
-      "81/81 - 1s - loss: 0.0015 - accuracy: 0.9996 - val_loss: 1.5081 - val_accuracy: 0.9153\n",
-      "Epoch 74/100\n",
-      "81/81 - 1s - loss: 0.0015 - accuracy: 0.9996 - val_loss: 1.5156 - val_accuracy: 0.9159\n",
-      "Epoch 75/100\n",
-      "81/81 - 1s - loss: 0.0015 - accuracy: 0.9996 - val_loss: 1.5322 - val_accuracy: 0.9124\n",
-      "Epoch 76/100\n",
-      "81/81 - 1s - loss: 0.0014 - accuracy: 0.9996 - val_loss: 1.5319 - val_accuracy: 0.9171\n",
-      "Epoch 77/100\n",
-      "81/81 - 1s - loss: 0.0014 - accuracy: 0.9996 - val_loss: 1.5422 - val_accuracy: 0.9163\n",
-      "Epoch 78/100\n",
-      "81/81 - 2s - loss: 0.0014 - accuracy: 0.9996 - val_loss: 1.5482 - val_accuracy: 0.9183\n",
-      "Epoch 79/100\n",
-      "81/81 - 1s - loss: 0.0014 - accuracy: 0.9996 - val_loss: 1.5640 - val_accuracy: 0.9143\n",
-      "Epoch 80/100\n",
-      "81/81 - 2s - loss: 0.0013 - accuracy: 0.9996 - val_loss: 1.5768 - val_accuracy: 0.9124\n",
-      "Epoch 81/100\n",
-      "81/81 - 1s - loss: 0.0013 - accuracy: 0.9996 - val_loss: 1.5836 - val_accuracy: 0.9134\n",
-      "Epoch 82/100\n",
-      "81/81 - 1s - loss: 0.0013 - accuracy: 0.9996 - val_loss: 1.5900 - val_accuracy: 0.9146\n",
-      "Epoch 83/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "81/81 - 1s - loss: 0.0012 - accuracy: 0.9996 - val_loss: 1.5954 - val_accuracy: 0.9164\n",
-      "Epoch 84/100\n",
-      "81/81 - 1s - loss: 0.0012 - accuracy: 0.9996 - val_loss: 1.5993 - val_accuracy: 0.9192\n",
-      "Epoch 85/100\n",
-      "81/81 - 1s - loss: 0.0012 - accuracy: 0.9996 - val_loss: 1.6196 - val_accuracy: 0.9130\n",
-      "Epoch 86/100\n",
-      "81/81 - 1s - loss: 0.0011 - accuracy: 0.9996 - val_loss: 1.6174 - val_accuracy: 0.9190\n",
-      "Epoch 87/100\n",
-      "81/81 - 1s - loss: 0.0011 - accuracy: 0.9996 - val_loss: 1.6347 - val_accuracy: 0.9143\n",
-      "Epoch 88/100\n",
-      "81/81 - 1s - loss: 0.0011 - accuracy: 0.9996 - val_loss: 1.6462 - val_accuracy: 0.9123\n",
-      "Epoch 89/100\n",
-      "81/81 - 1s - loss: 0.0011 - accuracy: 0.9996 - val_loss: 1.6461 - val_accuracy: 0.9175\n",
-      "Epoch 90/100\n",
-      "81/81 - 1s - loss: 0.0011 - accuracy: 0.9996 - val_loss: 1.6561 - val_accuracy: 0.9165\n",
-      "Epoch 91/100\n",
-      "81/81 - 1s - loss: 0.0011 - accuracy: 0.9996 - val_loss: 1.6721 - val_accuracy: 0.9130\n",
-      "Epoch 92/100\n",
-      "81/81 - 1s - loss: 0.0010 - accuracy: 0.9996 - val_loss: 1.6862 - val_accuracy: 0.9106\n",
-      "Epoch 93/100\n",
-      "81/81 - 1s - loss: 0.0010 - accuracy: 0.9996 - val_loss: 1.6767 - val_accuracy: 0.9161\n",
-      "Epoch 94/100\n",
-      "81/81 - 1s - loss: 9.9621e-04 - accuracy: 0.9996 - val_loss: 1.6890 - val_accuracy: 0.9175\n",
-      "Epoch 95/100\n",
-      "81/81 - 1s - loss: 9.9557e-04 - accuracy: 0.9996 - val_loss: 1.7094 - val_accuracy: 0.9109\n",
-      "Epoch 96/100\n",
-      "81/81 - 1s - loss: 9.3961e-04 - accuracy: 0.9996 - val_loss: 1.7093 - val_accuracy: 0.9159\n",
-      "Epoch 97/100\n",
-      "81/81 - 1s - loss: 9.4606e-04 - accuracy: 0.9996 - val_loss: 1.7172 - val_accuracy: 0.9138\n",
-      "Epoch 98/100\n",
-      "81/81 - 1s - loss: 9.0647e-04 - accuracy: 0.9996 - val_loss: 1.7377 - val_accuracy: 0.9108\n",
-      "Epoch 99/100\n",
-      "81/81 - 1s - loss: 8.6448e-04 - accuracy: 0.9996 - val_loss: 1.7348 - val_accuracy: 0.9158\n",
-      "Epoch 100/100\n",
-      "81/81 - 1s - loss: 8.7087e-04 - accuracy: 0.9996 - val_loss: 1.7559 - val_accuracy: 0.9100\n",
+      "Epoch 1/10\n",
+      "1296/1296 - 12s - loss: 0.6441 - accuracy: 0.8810 - val_loss: 0.8556 - val_accuracy: 0.8979\n",
+      "Epoch 2/10\n",
+      "1296/1296 - 12s - loss: 0.0289 - accuracy: 0.9996 - val_loss: 1.0869 - val_accuracy: 0.9080\n",
+      "Epoch 3/10\n",
+      "1296/1296 - 10s - loss: 0.0075 - accuracy: 0.9996 - val_loss: 1.2585 - val_accuracy: 0.9160\n",
+      "Epoch 4/10\n",
+      "1296/1296 - 10s - loss: 0.0038 - accuracy: 0.9996 - val_loss: 1.3981 - val_accuracy: 0.9109\n",
+      "Epoch 5/10\n",
+      "1296/1296 - 11s - loss: 0.0026 - accuracy: 0.9996 - val_loss: 1.5067 - val_accuracy: 0.9122\n",
+      "Epoch 6/10\n",
+      "1296/1296 - 10s - loss: 0.0021 - accuracy: 0.9996 - val_loss: 1.5866 - val_accuracy: 0.9187\n",
+      "Epoch 7/10\n",
+      "1296/1296 - 11s - loss: 0.0019 - accuracy: 0.9996 - val_loss: 1.6740 - val_accuracy: 0.9160\n",
+      "Epoch 8/10\n",
+      "1296/1296 - 13s - loss: 0.0018 - accuracy: 0.9996 - val_loss: 1.7524 - val_accuracy: 0.9170\n",
+      "Epoch 9/10\n",
+      "1296/1296 - 12s - loss: 0.0017 - accuracy: 0.9996 - val_loss: 1.8418 - val_accuracy: 0.9135\n",
+      "Epoch 10/10\n",
+      "1296/1296 - 12s - loss: 0.0015 - accuracy: 0.9996 - val_loss: 1.8801 - val_accuracy: 0.9129\n",
       "\n",
-      ">>>>>>>>>>> Training completed in 90.80s\n",
-      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_1_epoch100_batchsize64_20211007-144206.h5\n"
+      ">>>>>>>>>>> Training completed in 114.29s\n",
+      "Model saved at ---> models/CS2021_CLASSIFIER_BDD_1_epoch10_batchsize4_20211007-145542.h5\n"
      ]
     }
    ],
@@ -481,8 +295,8 @@
     "import datetime\n",
     "\n",
     "#training process\n",
-    "nb_epochs= 100\n",
-    "batch_size = 64\n",
+    "nb_epochs= 10\n",
+    "batch_size = 4\n",
     "\n",
     "time_date = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "\n",
@@ -503,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d4fbe9",
+   "id": "ed4bfc37",
    "metadata": {},
    "source": [
     "# 3-4) Visualisation par Tensorboard\n",
@@ -517,7 +331,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "612aa93b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -714,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "d4182019",
    "metadata": {},
    "outputs": [],
@@ -726,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "b7e628ba",
    "metadata": {},
    "outputs": [],
